--- a/mobile_style.css
+++ b/mobile_style.css
@@ -165,35 +165,6 @@ footer p {
     font-size: .6rem;
     text-transform: uppercase;
 }
-
-@media (orientation: landscape) {
-    header {
-        position: absolute;
-        top: 5%;
-        right: 5%;
-        width: 40%;
-    }
-    div.map {
-        margin: 0;
-        width: 45%;
-        position: absolute;
-        top: 5%;
-        left: 5%;
-    }
-
-    main div.input_area {
-        height: 50%;
-        position: absolute;
-        bottom: 10%;
-        right: 0%;
-        width: 50%;
-    }
-
-    footer {
-        height: 4vh;
-    }
-}
-
 /* streets */
 
 .brojsce {
@@ -674,7 +645,7 @@ div.directions i:nth-of-type(2) {
 }
 
 div.directions i:nth-of-type(3) {
-    top: 93%;
+    top: 92%;
     left: 16%;
     transform: rotate(200deg);
 }
@@ -687,7 +658,7 @@ div.directions i:nth-of-type(4) {
 
 div.directions i:nth-of-type(5) {
     top: 30.6%;
-    left: 93.5%;
+    left: 92.5%;
     transform: rotate(70deg);
 }
 
@@ -707,6 +678,43 @@ div.directions i:nth-of-type(6) {
 .visible2 {
     filter: none;
     animation: blink2 1s 1;
+}
+
+@media (orientation: landscape) {
+    header {
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        width: 40%;
+    }
+    div.map {
+        margin: 0;
+        width: 45%;
+        position: absolute;
+        top: 5%;
+        left: 5%;
+    }
+
+    main div.input_area {
+        height: 50%;
+        position: absolute;
+        bottom: 0%;
+        right: 0%;
+        width: 50%;
+    }
+
+    footer {
+        height: 4vh;
+    }
+
+    div.directions p {
+        font-size: .5rem;
+    }
+
+    div.directions i {
+        font-size: .6rem;
+    }
+
 }
 
 
