--- a/mobile_style.css
+++ b/mobile_style.css
@@ -204,7 +204,7 @@ footer p {
     position: absolute;
     top: 0%;
     left: 40%;
-    width: auto;
+    width: 60%;
     height: 93.5%;
     z-index: 3;
     opacity: 1;
