--- a/mobile_style.css
+++ b/mobile_style.css
@@ -7,6 +7,7 @@
 
 html {
     font-size: 16px;
+    background-color: rgb(208, 219, 208);
 }
 
 body {
@@ -32,7 +33,8 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: stretch;
-    height: 20vh;
+    /* flex-shrink: 2; */
+    height: 17vh;
     width: 100%;
     padding-top: 5px;
 }
@@ -45,7 +47,7 @@ header img {
 }
 
 header h1 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     text-transform: uppercase;
     text-align: center;
     background-color: rgb(208, 219, 208);
@@ -55,8 +57,9 @@ header h1 {
 /* main */
 
 main {
-    height: 77vh;
+    height: 80vh;
     width: 100%;
+    /* flex-shrink: 1; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,10 +69,17 @@ main {
 
 div.input_area {
     width: 100%;
-    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+div.buttons_left {
+    display: none;
+}
+
+div.buttons_right {
+    display: none;
 }
 
 main div.select_inputs {
@@ -77,7 +87,7 @@ main div.select_inputs {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 50px;
+    padding: 0 40px;
 }
 
 main div.select_inputs + div.select_inputs {
@@ -91,7 +101,7 @@ main div.select_inputs label {
 }
 
 main div.select_inputs select {
-    width: 50%;
+    width: 80%;
     display: block;
     text-transform: uppercase;
     margin-left: 10px;
@@ -100,8 +110,7 @@ main div.select_inputs select {
 
 div.map {
     position: relative;
-    max-width: 778px;
-    max-height: 880px;
+    max-width: 100%;
     margin: 10px 10px 0px;
     border: 2px solid rgb(208, 219, 208);
     overflow: hidden;
@@ -109,18 +118,15 @@ div.map {
 
 div.map img.mapofBuczek {
     display: block;
-    margin: 0 auto;
-    height: 100%;
-    width: 100%;
-    max-width: 778px;
-    max-height: 880px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 div.map img.mapnorth {
     position: absolute;
     height: 100%;
     width: 100%;
-    max-width: 778px;
+    max-width: 384px;
     max-height: 880px;
     top: -1000px;
     left: 0%;
@@ -171,7 +177,6 @@ footer p {
     position: absolute;
     top: 69.8%;
     left: 90.5%;
-    /* width: auto; */
     height: 14.8%;
     z-index: 1;
     opacity: 1;
@@ -606,7 +611,7 @@ div.directions p:nth-of-type(2) {
 }
 
 div.directions p:nth-of-type(3) {
-    top: 92.5%;
+    top: 91.5%;
     left: 1%;
 }
 
@@ -714,6 +719,121 @@ div.directions i:nth-of-type(6) {
     div.directions i {
         font-size: .6rem;
     }
+
+}
+
+@media (min-width: 760px) {
+
+    main {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        overflow: hidden;
+    }
+    
+    div.input_area {
+        display: none;
+    }
+    
+    header {
+        position: static;
+        height: 10vh;
+    }
+    div.map {
+        /* display: none; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        max-width: auto;
+        max-height: auto;
+        margin: 6%;
+        top: 0%;
+        left: 0%;
+    }
+
+    header {
+        width: 100%;
+    }
+    
+    div.map img.mapofBuczek {
+        display: block;
+        max-width: auto;
+        max-height: auto;
+    }
+
+    /* buttons */
+div.buttons_left {
+    flex-basis: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+div.buttons_left button {
+    margin: 2% 0 2% -20px;
+    flex-grow: 1;
+    width: 80%;
+    border-top: none;
+    cursor: pointer;
+    transition: .3s;
+    box-shadow: 7px 4px 0px -2px #BC2026;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    background-color: #64878B;
+    transform: skew(-45deg);
+    border-color: rgb(184, 194, 196);
+    font-size: .9rem;
+}
+
+div.buttons_left button:hover {
+    background-color: #BC2026;
+    box-shadow: 6px 4px 0px -8px #ccc;
+}
+
+div.buttons_left button span {
+    display: block;
+    transform: skew(45deg);
+}
+
+div.buttons_right {
+    flex-basis: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+div.buttons_right button {
+    margin: 2% -20px 2% 0;
+    flex-grow: 1;
+    width: 80%;
+    border-top: none;
+    cursor: pointer;
+    transition: .3s;
+    box-shadow: -7px 4px 0px -2px #BC2026;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    background-color: #64878B;
+    transform: skew(45deg);
+    border-color: rgb(184, 194, 196);
+    font-size: .9rem;
+}
+
+div.buttons_right button:hover {
+    background-color: #BC2026;
+    box-shadow: 6px 4px 0px -4px #ccc;
+}
+
+div.buttons_right button span {
+    display: block;
+    transform: skew(-45deg);
+}
 
 }
 
