Add position: relative to div.wrapper

--- a/mobile_style.css
+++ b/mobile_style.css
@@ -798,6 +798,7 @@ div.buttons_right button.activeButton {
 
 @media (orientation: landscape) {
     div.wrapper {
+        position: relative;
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
                 flex-direction: row;
